--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ### Configuracao da API REST
-server.servlet.context-path=/api/inpi/
+server.servlet.context-path=/api/inpi/v1
 
 # Postgres
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
