--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ server.servlet.context-path=/api/inpi/v1
 
 # Postgres
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.url=jdbc:postgresql://localhost:5432/INPI
+spring.datasource.url=jdbc:postgresql://localhost:5432/inpi
 spring.datasource.username=postgres
-spring.datasource.password=docker
+spring.datasource.password=diego
 
 #SQL.
 spring.jpa.show-sql=true
